--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -1,5 +1,6 @@
 <Alloy>
-	<Window id="dettaglio_post_win" class="container" title="Dettaglio Post">
+	
+	<Window id="dettaglio_post_win" class="container" title="Dettaglio Post" onOpen="doOpen">
 		<TitleControl platform="ios">
 			<Label class="titleControl">Dettaglio Post</Label>
 		</TitleControl>
@@ -9,20 +10,23 @@
 		<Menu id="menu" platform="android">
 			<MenuItem id="mn_settings" title="Impostazioni"/>
 		</Menu>
-		<View id="dettaglio_post_container">
-			<ImageView id="cat_icon" />
-			<View id="postData">
-				<Label id="titolo" />
-				<View id="secondLine">
-					<ImageView id="cat_mini_icon"/>
-					<Label id="category"/>
+		
+		<ScrollableView id="scrollableTimeline" dataFunction="updateCollection" dataCollection="Timeline" dataTransform="transformData"  showPagingControl="true">
+			<View id="dettaglio_post_container">
+				<ImageView id="cat_icon" image="{catImage}" />
+				<View id="postData">
+					<Label id="titolo" text="{name}" />
+					<View id="secondLine">
+						<ImageView id="cat_mini_icon"/>
+						<Label id="category" text="{categoria}"/>
+					</View>
+					<Label id="data_post" text="{postDate}"/>
+
 				</View>
-				<Label id="data_post"/>
 
 			</View>
-
-		</View>
-		<View id="aspect_icon_toolbar"></View>
+		</ScrollableView>
+		
 
 	</Window>
 </Alloy>
