--- a/app/views/dettaglio_cashflow.xml
+++ b/app/views/dettaglio_cashflow.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<ScrollableView id="scrollableCashflow" dataCollection="aspettiCashflow" dataFunction="dataResync" dataTransform="transformData">
+	<ScrollableView id="scrollableCashflow" dataCollection="aspettiCashflow" dataFunction="dataResync" dataTransform="transformCASH">
 		<ScrollView id="aspectScrollView">
 
 			<View class="rowWrapper">
@@ -12,35 +12,35 @@
 			</View>
 			<View class="rowWrapper">
 				<Label class = "label">Pagamento:</Label>
-				<Label id = "pagamento" class = "value"/>
+				<Label id = "pagamento" class = "value" text="{pagamento}"/>
 			</View>
 			<View class="rowWrapper newline">
 				<Label class = "label">Variabilità:</Label>
-				<Label id = "variabilita" class = "value"/>
+				<Label id = "variabilita" class = "value" text="{variabilita}"/>
 			</View>
 			<View class="rowWrapper">
 				<Label class = "label">Stato:</Label>
-				<Label id = "stato" class = "value"/>
+				<Label id = "stato" class = "value" text="{stato}"/>
 			</View>
 			<View class="rowWrapper">
 				<Label class = "label">Tipologia:</Label>
-				<Label id = "tipologia" class = "value"/>
+				<Label id = "tipologia" class = "value" text="{tipologia}"/>
 			</View>
 			<View class="rowWrapper">
 				<Label class = "label">Dichiarazione dei Redditi:</Label>
-				<Label id = "redditi" class = "value"/>
+				<Label id = "redditi" class = "value" text="{dich_redditi}"/>
 			</View>
 			<View class="rowWrapper newline">
 				<Label class = "label">Data Valuta:</Label>
-				<Label id = "datavaluta" class = "value"/>
+				<Label id = "datavaluta" class = "value" text="{datavaluta}"/>
 			</View>
 			<View class="rowWrapper">
 				<Label class = "label">Data Scadenza:</Label>
-				<Label id = "datascadenza" class = "value"/>
+				<Label id = "datascadenza" class = "value" text="{datascadenza}"/>
 			</View>
 			<View class="rowWrapper last">
 				<Label class = "label">Data Pagamento:</Label>
-				<Label id = "datapagamento" class = "value"/>
+				<Label id = "datapagamento" class = "value" text="{datapagamento}"/>
 			</View>
 
 		</ScrollView>
