--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -22,12 +22,12 @@
 
 				</View>
 				<View id="aspect_icon_toolbar">
-					<ImageView class="aspects_icons first" id="event_icon" onClick="dettEvento" image="{iconEvent}"/>
-					<ImageView class="aspects_icons" id="cashflow_icon" onClick="dettCashflow" image="{iconCashFlow}"/>
-					<ImageView class="aspects_icons" id="document_icon" onClick="dettDocument" image="{iconDocument}"/>
-					<ImageView class="aspects_icons" id="note_icon" image="{iconNote}"/>
-					<ImageView class="aspects_icons" id="link_icon" image="{iconLink}"/>
-					<ImageView class="aspects_icons" id="communication_icon" image="{iconCommunication}"/>
+					<Label class="aspects_icons first" id="event_icon" onClick="dettEvento" text="{iconEvent}" width="{iconEventWidth}" left="{iconEventLeft}"/>
+					<Label class="aspects_icons" id="cashflow_icon" onClick="dettCashflow" text="{iconCashFlow}" width="{iconCashWidth}" left="{iconCashLeft}"/>
+					<Label class="aspects_icons" id="document_icon" onClick="dettDocument" text="{iconDocument}" width="{iconDocWidth}" left="{iconDocLeft}"/>
+					<Label class="aspects_icons" id="note_icon" text="{iconNote}" width="{iconNoteWidth}" left="{iconNoteLeft}"/>
+					<Label class="aspects_icons" id="link_icon" text="{iconLink}" width="{iconLinktWidth}" left="{iconLinkLeft}"/>
+					<Label class="aspects_icons" id="communication_icon" text="{iconCommunication}" width="{iconCommWidth}" left="{iconCommLeft}"/>
 					<!--<Label id = "aspects" text="{aspects}"/>-->
 					<View class="show_all_container">
 						<View class="push_to_right">
