--- a/app/views/dettaglio_document.xml
+++ b/app/views/dettaglio_document.xml
@@ -1,10 +1,15 @@
 <Alloy>
 	<ScrollableView id="scrollableDocument" dataCollection="aspettiDocument" dataFunction="dataResync" dataTransform="transform">
 		<ScrollView id="aspectScrollView">
-
-			<Label id="titolo" class="aspect_title" text="{titolo}"/>
+			
 			<View class="subcontainer">
-				<Label id="img_icon" text ="{img_icon}"/>
+				<Label id="img_icon" text ="{aspect_icon}"/>
+				<Label id="titolo" class="aspect_title" text="{titolo}"/>
+			</View>
+
+			
+			<View class="subcontainer">
+				<Label id="img_iconcina" text ="{img_icon}"/>
 				<Label class="aspect_text" id="nome_file" text="{nome_file}"/>				
 				<Label id="filesize" class="aspect_text" text="{file_size}"/>
 			</View>
