--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -11,7 +11,9 @@
 		</Menu>
 		<ScrollableView id="scrollableTimeline" dataFunction="updateCollection" dataCollection="Timeline" dataTransform="transformData" showPagingControl="true" onScrollend="scrollendEvent">
 			<View id="dettaglio_post_container">
-				<ImageView id="cat_icon" image="{catImage}" />
+				<View id="cat_icon_container" backgroundColor="{cat_color}">
+					<Label id="catIcon" text="{catImage}"/>
+				</View>
 				<View id="postData">
 					<Label id="titolo" text="{name}" />
 					<View id="secondLine">
@@ -25,8 +27,8 @@
 					<Label class="aspects_icons first" id="event_icon" onClick="dettEvento" text="{iconEvent}" width="{iconEventWidth}" left="{iconEventLeft}"/>
 					<Label class="aspects_icons" id="cashflow_icon" onClick="dettCashflow" text="{iconCashFlow}" width="{iconCashWidth}" left="{iconCashLeft}"/>
 					<Label class="aspects_icons" id="document_icon" onClick="dettDocument" text="{iconDocument}" width="{iconDocWidth}" left="{iconDocLeft}"/>
-					<Label class="aspects_icons" id="note_icon" text="{iconNote}" width="{iconNoteWidth}" left="{iconNoteLeft}"/>
-					<Label class="aspects_icons" id="link_icon" text="{iconLink}" width="{iconLinktWidth}" left="{iconLinkLeft}"/>
+					<Label class="aspects_icons" id="note_icon" onClick="dettNote" text="{iconNote}" width="{iconNoteWidth}" left="{iconNoteLeft}"/>
+					<Label class="aspects_icons" id="link_icon" onClick="dettLink" text="{iconLink}" width="{iconLinktWidth}" left="{iconLinkLeft}"/>
 					<Label class="aspects_icons" id="communication_icon" text="{iconCommunication}" width="{iconCommWidth}" left="{iconCommLeft}"/>
 					<!--<Label id = "aspects" text="{aspects}"/>-->
 					<View class="show_all_container">
@@ -39,7 +41,8 @@
 				</View>
 			</View>
 		</ScrollableView>
+		<View class ="separator"/>
 		<View id="aspect_detail_container"></View>
-		
+
 	</Window>
 </Alloy>
