--- a/app/views/timeline.xml
+++ b/app/views/timeline.xml
@@ -10,7 +10,7 @@
 			<Menu id="menu" platform="android">
 				<MenuItem id="mn_settings" title="Logout" onClick="f_logout"/>
 			</Menu>
-			<ListView id="timelineList" defaultItemTemplate="timelineTemplate" onItemclick="dettaglioPost">
+			<ListView id="timelineList" defaultItemTemplate="timelineTemplate" onMarker="addMorePosts" onItemclick="dettaglioPost">
 				<Templates>
 					<ItemTemplate name="timelineTemplate" height="90" width="90%">
 						<View id="cat_icon_container" bindId="catColor">
@@ -23,16 +23,13 @@
 								<Label id="category" bindId="categoria"/>
 							</View>
 							<Label id="data_post" bindId="data"/>
-
 						</View>
-
 					</ItemTemplate>
 				</Templates>
 				<ListSection>
 					<ListItem></ListItem>
 				</ListSection>
 			</ListView>
-
 		</Window>
 	</NavigationWindow>
 </Alloy>
