--- a/app/views/dettaglio_document.xml
+++ b/app/views/dettaglio_document.xml
@@ -1,13 +1,16 @@
 <Alloy>
-	<ScrollView id="aspectScrollView">
+	<ScrollView id="aspectScrollView" scrollType="vertical">
 
 		<Label id="titolo" class="aspect_title"/>
 		<View class="subcontainer">
 			<Label id="img_iconcina"/>
 			<Label id="nome_file" class="aspect_text"/>
-			<Label id="filesize" class="aspect_text"/>
+			
 		</View>
-		<Label id="data_creazione" class="aspect_text"/>
+		<Label id="data_documento" class="aspect_text"/>
+		<Label id="filesize" class="aspect_text"/>
+		<Label id="tipo_file" class="aspect_text"/>
+		
 		<ImageView id="img_preview"/>
 	</ScrollView>
 </Alloy>
