--- a/app/views/dettaglio_evento.xml
+++ b/app/views/dettaglio_evento.xml
@@ -3,8 +3,11 @@
 		
 		<Label id="titolo" class="aspect_title"/>
 		<Label id="dataEvento" class="aspect_text"/>
-		<Label id="location" class="aspect_text"/>
-		<View id="mapview" ns="Alloy.Globals.Map"/>
+		<Label id="location" class="aspect_text"/>		
+		<View id="show_map_container" onClick="openMap">
+			<Label id="show_map_icon"/>
+			<Label id="show_map_text" class="aspect_text"/>
+		</View>		
 		<Label id="tipo_evento" class="aspect_text"/>
 
 	</ScrollView>
