--- a/app/views/inserimento_post.xml
+++ b/app/views/inserimento_post.xml
@@ -6,6 +6,10 @@
 				<Label id="orologetto"/>
 				<Label id="data_post" class="small_text"/>
 			</View>
+			<View class="multi_container" onClick="openLocationSelector">
+				<Label id="map_marker"/>
+				<Label id="location_post" class="small_text"/>
+			</View>
 			<Label id="categoria" class="small_text" onClick="openCategoryList"/>
 			
 			
@@ -21,5 +25,23 @@
 				<Label id="icon_link" class="aspects_icons insertAspects" onClick="addLink"/>
 			</View>
 		</View>
+		<OptionDialog id="opzioni_posizione" onClick="loactionSelected">
+
+            <!-- The Options tag sets the options property. -->
+            <Options>
+                <Option>Usa la mia posizione</Option>
+                <Option>Cerca luoghi vicino a te</Option>
+                <Option>Cerca indirizzo/mappa</Option>
+                <Option>Rimuovi posizione</Option>
+            </Options>
+
+            <!-- The ButtonNames tag sets the Android-only buttonNames property. -->
+            <ButtonNames>
+                <ButtonName>Annulla</ButtonName>
+            </ButtonNames>
+
+            <!-- Add a View for the androidView property here. -->
+
+        </OptionDialog>
 	</Window>
 </Alloy>
