Completato Inserimento evento (manca effettivo, pianificato etc...)

--- a/app/views/inserimento_post.xml
+++ b/app/views/inserimento_post.xml
@@ -11,7 +11,8 @@
 				<Label id="location_post" class="small_text"/>
 			</View>
 			<Label id="categoria" class="small_text" onClick="openCategoryList"/>
-			
+			<View class="separatore"/>
+			<TableView id="tbl_aspetti"/>
 			
 
 		</View>
