--- a/app/views/inserimento_post.xml
+++ b/app/views/inserimento_post.xml
@@ -11,12 +11,14 @@
 				<Label id="location_post" class="small_text"/>
 			</View>
 			<Label id="categoria" class="small_text" onClick="openCategoryList"/>
-			<View class="separatore"/>
-			<TableView id="tbl_aspetti"/>
 			
 
 		</View>
-		
+		<!--<View class="separatore"></View>-->
+		<View id="table_briefs_wrapper">
+			<View class="separatore"></View>
+			<TableView id="tbl_aspetti"/>
+		</View>
 		<View id="bottomBar">
 			<View id="buttonsContainer">
 				<Label id="icon_event" class="aspects_icons 1_insertAspects"  onClick="addEvent"/>
@@ -28,58 +30,57 @@
 		</View>
 		<OptionDialog id="opzioni_media" onClick="openSelectedMedia">
 
-            <!-- The Options tag sets the options property. -->
-            <Options>
-                <Option>Scatta una foto</Option>
-                <Option>Scegli dalla Galleria</Option>
-            </Options>
+			<!-- The Options tag sets the options property. -->
+			<Options>
+				<Option>Scatta una foto</Option>
+				<Option>Scegli dalla Galleria</Option>
+			</Options>
 
-            <!-- The ButtonNames tag sets the Android-only buttonNames property. -->
-            <ButtonNames>
-                <ButtonName>Annulla</ButtonName>
-            </ButtonNames>
+			<!-- The ButtonNames tag sets the Android-only buttonNames property. -->
+			<ButtonNames>
+				<ButtonName>Annulla</ButtonName>
+			</ButtonNames>
 
-            <!-- Add a View for the androidView property here. -->
+			<!-- Add a View for the androidView property here. -->
 
-        </OptionDialog>
+		</OptionDialog>
 		<OptionDialog id="opzioni_posizione" onClick="loactionSelected">
 
-            <!-- The Options tag sets the options property. -->
-            <Options>
-                <Option>Usa la mia posizione</Option>
-                <Option>Cerca luoghi vicino a te</Option>
-                <Option>Cerca indirizzo/mappa</Option>
-                <Option>Rimuovi posizione</Option>
-            </Options>
+			<!-- The Options tag sets the options property. -->
+			<Options>
+				<Option>Usa la mia posizione</Option>
+				<Option>Cerca luoghi vicino a te</Option>
+				<Option>Cerca indirizzo/mappa</Option>
+				<Option>Rimuovi posizione</Option>
+			</Options>
 
-            <!-- The ButtonNames tag sets the Android-only buttonNames property. -->
-            <ButtonNames>
-                <ButtonName>Annulla</ButtonName>
-            </ButtonNames>
+			<!-- The ButtonNames tag sets the Android-only buttonNames property. -->
+			<ButtonNames>
+				<ButtonName>Annulla</ButtonName>
+			</ButtonNames>
 
-            <!-- Add a View for the androidView property here. -->
+			<!-- Add a View for the androidView property here. -->
 
-        </OptionDialog>
-        
-        <OptionDialog id="opzioni_cashflow" onClick="addCashflow" title="Aggiungi">
+		</OptionDialog>
+		<OptionDialog id="opzioni_cashflow" onClick="addCashflow" title="Aggiungi">
 
-            <!-- The Options tag sets the options property. -->
-            <Options>
-                <Option>Uscita</Option>
-                <Option>Entrata</Option>
-                <Option>Bancomat</Option>
-                <Option>Prelievo</Option>
-                <Option>Versamento</Option>
-                <Option>Giroconto</Option>
-            </Options>
+			<!-- The Options tag sets the options property. -->
+			<Options>
+				<Option>Uscita</Option>
+				<Option>Entrata</Option>
+				<Option>Bancomat</Option>
+				<Option>Prelievo</Option>
+				<Option>Versamento</Option>
+				<Option>Giroconto</Option>
+			</Options>
 
-            <!-- The ButtonNames tag sets the Android-only buttonNames property. -->
-            <ButtonNames>
-                <ButtonName>Annulla</ButtonName>
-            </ButtonNames>
+			<!-- The ButtonNames tag sets the Android-only buttonNames property. -->
+			<ButtonNames>
+				<ButtonName>Annulla</ButtonName>
+			</ButtonNames>
 
-            <!-- Add a View for the androidView property here. -->
+			<!-- Add a View for the androidView property here. -->
 
-        </OptionDialog>
+		</OptionDialog>
 	</Window>
 </Alloy>
