--- a/app/views/postDetailSingleView.xml
+++ b/app/views/postDetailSingleView.xml
@@ -1,4 +1,43 @@
 <Alloy>
+	<View layout="vertical" height="Ti.UI.SIZE">
+		<View id="headerRow" class="headerRow">
+			<View class="avatar">
+				<View id="avatarBox" class="avatarBox">
+					<Label id="avatarImage" class="avatarImage"/>
+				</View>
+			</View>
+			<View class="text">
+				<!--View class="firstLine">
+				<Label class="firstLineTitle" text="{$.dataModel.title}" />
+				</View>
+				<View class="secondLine">
+				<Label class="secondLineText" text="{$.dataModel.subtitle}"/>
+				</View-->
+				<Label id="firstLineTitle" class="firstLineTitle"/>
+				<Label id="secondLineText"class="secondLineText"/>
+			</View>
+		</View>
+		<!--View class="separator" /-->
+		<View id="dateTimeRow" class="dateTimeRow">
+			<View class="date">
+				<Label class="dateIcon" />
+				<Label id="dateText" class="dateText"/>
+			</View>
+			<View class="time">
+				<Label class="timeIcon" />
+				<Label id="timeText" class="timeText"/>
+			</View>
+		</View>
+		<!--View class="separator" /-->
+		<!--View class="locationContent" backgroundColor="{$.dataModel.color}"-->
+		<View id="location" class="location">
+			<Label class="locationIcon" />
+			<Label id="locationText" class="locationText"/>
+		</View>
+		<!--/View-->
+		<View id="marginator" class="marginator"/>
+	</View>
+	<!-->
 	<View id="dettaglio_post_container">
 		<View id="cat_icon_container">
 			<Label id="catIcon"/>
@@ -14,4 +53,5 @@
 		</View>
 		
 	</View>
+	<-->
 </Alloy>
